make some 2006L strings translatable

--- a/templates/2006L/_layout.twig
+++ b/templates/2006L/_layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<title>squareBracket - Punny slogan attempting to be simillar to a certain website's slogan</title>
+	<title>squareBracket - {{ __("Punny slogan attempting to be simillar to a certain website's slogan") }}</title>
 
 	<link rel="stylesheet" href="/assets/2006l/styles_yts1162330703.css" type="text/css">
 	<link rel="stylesheet" href="/assets/2006l/base_yts1163746048.css" type="text/css">
@@ -30,18 +30,18 @@
 		<a href="index.php?frontend=2006L" name="&amp;lid=Logo&amp;lpos=GlobalNav"><img src="/assets/2006l/logo_tagline_sm.gif" alt="squareBracket" width="254" height="48" border="0"></a>
 	</div>
 	<div id="utilDiv" style="height:13px;">
-                        <b><a href="/web/20061124193253/http://www.youtube.com/signup" onclick="_hbLink('SignUp','UtilityLinks');">Sign Up</a></b>
+                        <b><a href="/web/20061124193253/http://www.youtube.com/signup" onclick="_hbLink('SignUp','UtilityLinks');">{{ __("Sign Up") }}</a></b>
                         <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/my_account">My Account</a>
+                        <a href="/web/20061124193253/http://www.youtube.com/my_account">{{ __("My Account") }}</a>
                         <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/recently_watched" onclick="_hbLink('ViewingHistory','UtilityLinks');">History</a>
+                        <a href="/web/20061124193253/http://www.youtube.com/recently_watched" onclick="_hbLink('ViewingHistory','UtilityLinks');">{{ __("History") }}</a>
                         <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/watch_queue?all" onclick="_hbLink('QuickList','UtilityLinks');">QuickList</a>
+                        <a href="/web/20061124193253/http://www.youtube.com/watch_queue?all" onclick="_hbLink('QuickList','UtilityLinks');">{{ __("QuickList") }}</a>
 			(<span id="quicklist_numb"><a href="/web/20061124193253/http://www.youtube.com/watch_queue?all"><script type="text/javascript">var quicklist_count=0;document.write(quicklist_count);</script>0</a></span>)                        
                         <span class="utilDelim">|</span>
                         <a href="/web/20061124193253/http://www.youtube.com/t/help_center">Help</a>
                         <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/login?next=/" onclick="_hbLink('LogIn','UtilityLinks');">Log In</a>
+                        <a href="/web/20061124193253/http://www.youtube.com/login?next=/" onclick="_hbLink('LogIn','UtilityLinks');">{{ __("Log In") }}</a>
         </div>
         <form name="logoutForm" method="post" action="/web/20061124193253/http://www.youtube.com/index">
                 <input type="hidden" name="action_logout" value="1">
@@ -50,10 +50,10 @@
 	
 	<div id="searchDiv">
 		<form name="searchForm" id="searchForm" method="get" action="/web/20061124193253/http://www.youtube.com/results">
-		<span class="smallLabel">Search for&nbsp;</span>
+		<span class="smallLabel">{{ __("Search for") }}&nbsp;</span>
 		<input tabindex="10000" type="text" name="search_query" maxlength="128" class="searchField" value="">
 		&nbsp;
-		<input type="submit" name="search" value="Search">
+		<input type="submit" name="search" value="{{ __("Search") }}">
 	</form>
 
 	</div>
@@ -64,37 +64,37 @@
 				
 				<div class="ltab">
 				<div class="tabContent selected">
-				<a href="/web/20061124193253/http://www.youtube.com/index" name="&amp;lid=Home&amp;lpos=GlobalNav">Home</a>
+				<a href="/web/20061124193253/http://www.youtube.com/index" name="&amp;lid=Home&amp;lpos=GlobalNav">{{ __("Home") }}</a>
 				</div>
 				</div>
 				
 				<div class="tab">
 				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/browse?s=mp" name="&amp;lid=Videos&amp;lpos=GlobalNav">Videos</a>
+				<a href="/web/20061124193253/http://www.youtube.com/browse?s=mp" name="&amp;lid=Videos&amp;lpos=GlobalNav">{{ __("Videos") }}</a>
 				</div>
 				</div>
 				
 				<div class="tab">
 				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/members" name="&amp;lid=Channels&amp;lpos=GlobalNav">Channels</a>
+				<a href="/web/20061124193253/http://www.youtube.com/members" name="&amp;lid=Channels&amp;lpos=GlobalNav">{{ __("Channels") }}</a>
 				</div>
 				</div>
 				
 				<div class="tab">
 				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/groups_main" name="&amp;lid=Groups&amp;lpos=GlobalNav">Groups</a>
+				<a href="/web/20061124193253/http://www.youtube.com/groups_main" name="&amp;lid=Groups&amp;lpos=GlobalNav">{{ __("Groups") }}</a>
 				</div>
 				</div>
 				
 				<div class="tab">
 				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/categories" name="&amp;lid=Categories&amp;lpos=GlobalNav">Categories</a>
+				<a href="/web/20061124193253/http://www.youtube.com/categories" name="&amp;lid=Categories&amp;lpos=GlobalNav">{{ __("Categories") }}</a>
 				</div>
 				</div>
 				
 				<div class="rtab">
 				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/my_videos_upload" name="&amp;lid=Upload&amp;lpos=GlobalNav">Upload</a>
+				<a href="/web/20061124193253/http://www.youtube.com/my_videos_upload" name="&amp;lid=Upload&amp;lpos=GlobalNav">{{ __("Upload") }}</a>
 				</div>
 				</div>
 		</div>
@@ -102,27 +102,27 @@
 	<tr><td>
 			<div id="gSubNavDiv">
 				&nbsp;
-						<a href="/web/20061124193253/http://www.youtube.com/my_account" onclick="_hbLink('MyAccount','SubNav');">My Account</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_account" onclick="_hbLink('MyAccount','SubNav');">{{ __("My Account") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_videos" onclick="_hbLink('MyVideos','SubNav');">My Videos</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_videos" onclick="_hbLink('MyVideos','SubNav');">{{ __("My Videos") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_favorites" onclick="_hbLink('MyFavorites','SubNav');">My Favorites</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_favorites" onclick="_hbLink('MyFavorites','SubNav');">{{ __("My Favorites") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_friends?sort=n" onclick="_hbLink('MyFriends','SubNav');">My Friends</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_friends?sort=n" onclick="_hbLink('MyFriends','SubNav');">{{ __("My Friends") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_messages" onclick="_hbLink('MyInbox','SubNav');">My Inbox</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_messages" onclick="_hbLink('MyInbox','SubNav');">{{ __("My Inbox") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/subscription_center" onclick="_hbLink('MySubscriptions','SubNav');">My Subscriptions</a>
+						<a href="/web/20061124193253/http://www.youtube.com/subscription_center" onclick="_hbLink('MySubscriptions','SubNav');">{{ __("My Subscriptions") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/groups_my" onclick="_hbLink('MyGroups','SubNav');">My Groups</a>
+						<a href="/web/20061124193253/http://www.youtube.com/groups_my" onclick="_hbLink('MyGroups','SubNav');">{{ __("My Groups") }}</a>
 							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_profile" onclick="_hbLink('MyChannel','SubNav');">My Channel</a>
+						<a href="/web/20061124193253/http://www.youtube.com/my_profile" onclick="_hbLink('MyChannel','SubNav');">{{ __("My Channel") }}</a>
 				&nbsp;
 			</div> <!-- end gSubNavDiv -->
 	</td></tr>
 	</tbody></table>
 
-<div class="errorBox">The 2006L frontend is not complete.</div>
+<div class="errorBox">{{ __("The 2006L frontend is not complete.") }}</div>
 {% block content %}{% endblock %}
 		<div class="spacer">&nbsp;</div>
 	<div id="footerDiv">
@@ -133,17 +133,17 @@
 			
 			<td>
 			<div class="footColumnBar">
-				<div class="footLabel">Your&nbsp;&nbsp;Account</div>
+				<div class="footLabel">{{ __("Your Account") }}</div>
 				<div class="footValues">
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/my_videos">Videos</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_favorites">Favorite</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_playlists">Playlists</a>
+					<a href="/web/20061124193253/http://www.youtube.com/my_videos">{{ __("Videos") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/my_favorites">{{ __("Favorite") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/my_playlists">{{ __("Playlists") }}</a>
 					</div>
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/subscription_center">Subscriptions</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_messages">Inbox</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_account">more...</a>
+					<a href="/web/20061124193253/http://www.youtube.com/subscription_center">{{ __("Subscriptions") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/my_messages">{{ __("Inbox") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/my_account">{{ __("more...") }}</a>
 					</div>
 				</div>
 			</div>
@@ -154,13 +154,13 @@
 				<div class="footLabel">squareBracket</div>
 				<div class="footValues">
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/about">About</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/blog">Blog</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/contact">Contact</a>
+					<a href="/web/20061124193253/http://www.youtube.com/t/about">{{ __("About") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/blog">{{ __("Blog") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/contact">{{ __("Contact") }}</a>
 					</div>
 					<div class="column">
-					<a href="https://discord.gg/bWczcjwDQR">Discord</a><br>
-					<a href="https://github.com/chazizsquarebracket/squarebracket">GitHub</a><br>
+					<a href="https://discord.gg/bWczcjwDQR">{{ __("Discord") }}</a><br>
+					<a href="https://github.com/chazizsquarebracket/squarebracket">{{ __("GitHub") }}</a><br>
 					<a href="https://www.youtube.com/channel/UCF2_DWR-mzsHaMi0axIxkPA">Gamerappa</a><br>
 					</div>
 				</div>
@@ -172,19 +172,19 @@
 				<div class="footLabel">Help &amp; Info</div>
 				<div class="footValues">
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/help_center">Help Center</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/video_toolbox">Video Toolbox</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/dev">Developer APIs</a>
+					<a href="/web/20061124193253/http://www.youtube.com/t/help_center">{{ __("Help Center") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/t/video_toolbox">{{ __("Video Toolbox") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/dev">{{ __("Developer APIs") }}</a>
 					</div>
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/safety">Safety Tips</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/rssls">RSS Syndication</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/community_guidelines">Community Guidelines</a>
+					<a href="/web/20061124193253/http://www.youtube.com/t/safety">{{ __("Safety Tips") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/rssls">{{ __("RSS Syndication<") }}/a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/t/community_guidelines">{{ __("Community Guidelines") }}</a>
 					</div>
 					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/terms">Terms of Use</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/privacy">Privacy Policy</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/dmca_policy">Copyright Info</a>
+					<a href="/web/20061124193253/http://www.youtube.com/t/terms">{{ __("Terms of Use") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/t/privacy">{{ __("Privacy Policy") }}</a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/t/dmca_policy">{{ __("Copyright Info") }}</a>
 					</div>
 				</div>
 			</div>
@@ -198,15 +198,15 @@
 		<div id="footerSearch">
 			
 			<form name="searchFormFooter" id="searchFormFooter" method="get" action="/web/20061124193253/http://www.youtube.com/results">
-			<span class="smallLabel">Search for&nbsp;</span>
+			<span class="smallLabel">{{ __("Search for") }}&nbsp;</span>
 			<input type="text" name="search_query" maxlength="128" class="searchField" value="">
 			&nbsp;
-			<input type="submit" name="search" value="Search">
+			<input type="submit" name="search" value="{{ __("Search") }}">
 			</form>
 		</div> <!-- end footerSearch -->
 		
 		<div id="footerCopyright">
-			Created by squareBracket contributors · {{ 'now' | date('Y') }} Gamerappa
+			{{ __("Created by squareBracket contributors") }} · {{ 'now' | date('Y') }} Gamerappa
 		</div> <!-- end footerCopyright -->
 		
 	</div> <!-- end footerDiv -->
