--- a/templates/2006L/index.twig
+++ b/templates/2006L/index.twig
@@ -63,7 +63,7 @@
 								<div class="vEntry">
 		<table class="vTable"><tbody><tr>
 			<td>
-				<a href="/web/20061124193253/http://www.youtube.com/watch?v=2w84qzHdEms"><img src="{{ video_thumbnail(video.video_id) }}" class="vimg120" border="0"></a>
+				<a href="watch.php?v={{ video.video_id }}&frontend=2006L"><img src="{{ video_thumbnail(video.video_id) }}" class="vimg120" border="0"></a>
 				        <script language="javascript" type="text/javascript">
                 if (navigator.appName.indexOf('Microsoft') != -1) {
                         document.write('<div id="add_img_{{ video.video_id }}" style="width:20px;margin-top:-29px;margin-left:1px;">');
@@ -78,7 +78,7 @@
 			</td>
 			<td class="vinfo">
 				<div class="vtitle">
-					<a href="/web/20061124193253/http://www.youtube.com/watch?v=2w84qzHdEms" onclick="_hbLink('ComplaintsChoirofBirmingham','VidHorz');">{{ video.title }}</a><br>
+					<a href="watch.php?v={{ video.video_id }}&frontend=2006L">{{ video.title }}</a><br>
 					<span class="runtime">{{ video.videolength }}</span>
 				</div>
 				<div class="vdesc">	
