fix closing tag on 2006L _layout

--- a/templates/2006L/_layout.twig
+++ b/templates/2006L/_layout.twig
@@ -178,7 +178,7 @@
 					</div>
 					<div class="column">
 					<a href="/web/20061124193253/http://www.youtube.com/t/safety">{{ __("Safety Tips") }}</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/rssls">{{ __("RSS Syndication<") }}/a><br>
+					<a href="/web/20061124193253/http://www.youtube.com/rssls">{{ __("RSS Syndication") }}</a><br>
 					<a href="/web/20061124193253/http://www.youtube.com/t/community_guidelines">{{ __("Community Guidelines") }}</a>
 					</div>
 					<div class="column">
