fix 2006L not working on production

--- a/templates/2006L/_layout.twig
+++ b/templates/2006L/_layout.twig
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 	<title>squareBracket - {{ __("Punny slogan attempting to be simillar to a certain website's slogan") }}</title>
 
-	<link rel="stylesheet" href="/assets/2006l/styles_yts1162330703.css" type="text/css">
-	<link rel="stylesheet" href="/assets/2006l/base_yts1163746048.css" type="text/css">
+	<link rel="stylesheet" href="/assets/2006L/styles_yts1162330703.css" type="text/css">
+	<link rel="stylesheet" href="/assets/2006L/base_yts1163746048.css" type="text/css">
 	{% block css %}{% endblock %}
-	<link rel="icon" href="/assets/2006l/favicon.ico" type="image/x-icon"> <!--- taken from poktube --->
-	<link rel="shortcut icon" href="/assets/2006l/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/assets/2006L/favicon.ico" type="image/x-icon"> <!--- taken from poktube --->
+	<link rel="shortcut icon" href="/assets/2006L/favicon.ico" type="image/x-icon">
 	
 	
 	<meta name="keywords" content="video,sharing,camera phone,video phone">
 
 	<link rel="alternate" title="YouTube - [RSS]" href="/web/20061124193253/http://www.youtube.com/rssls">
 
-	<script type="text/javascript" src="/assets/2006l/ui_yts1161839869.js"></script>
-	<script type="text/javascript" src="/assets/2006l/AJAX_yts1161839869.js"></script>
-	<script type="text/javascript" src="/assets/2006l/watch_queue_yts1161839869.js"></script>
-	<script type="text/javascript" src="/assets/2006l/components_yts1157352107.js"></script>
-	<script type="text/javascript" src="/assets/2006l/video_bar_yts1157352107.js"></script>
+	<script type="text/javascript" src="/assets/2006L/ui_yts1161839869.js"></script>
+	<script type="text/javascript" src="/assets/2006L/AJAX_yts1161839869.js"></script>
+	<script type="text/javascript" src="/assets/2006L/watch_queue_yts1161839869.js"></script>
+	<script type="text/javascript" src="/assets/2006L/components_yts1157352107.js"></script>
+	<script type="text/javascript" src="/assets/2006L/video_bar_yts1157352107.js"></script>
 	
 	<script language="javascript" type="text/javascript"> function _hbLink (a,b) { return false; } </script>
 
@@ -27,7 +27,7 @@
 <body onload="performOnLoadFunctions();">
 <div id="baseDiv">	
 		<div id="logoTagDiv">
-		<a href="index.php?frontend=2006L" name="&amp;lid=Logo&amp;lpos=GlobalNav"><img src="/assets/2006l/logo_tagline_sm.gif" alt="squareBracket" width="254" height="48" border="0"></a>
+		<a href="index.php?frontend=2006L" name="&amp;lid=Logo&amp;lpos=GlobalNav"><img src="/assets/2006L/logo_tagline_sm.gif" alt="squareBracket" width="254" height="48" border="0"></a>
 	</div>
 	<div id="utilDiv" style="height:13px;">
                         <b><a href="/web/20061124193253/http://www.youtube.com/signup" onclick="_hbLink('SignUp','UtilityLinks');">{{ __("Sign Up") }}</a></b>
