--- a/templates/2006L/index.twig
+++ b/templates/2006L/index.twig
@@ -72,7 +72,7 @@
                         document.write('<div id="add_img_{{ video.video_id }}" style="width:20px;margin-top:-29px;margin-left:1px;">');
                 }
         </script>
-        <a href="#" onclick="clicked_add_icon('{{ video.video_id }}', 0);return false;" title="Add Video to QuickList"><img id="add_button_{{ video.video_id }}" onmouseover="mouse_over_add_icon('{{ video.video_id }}');return false;" onmouseout="mouse_out_add_icon('{{ video.video_id }}');return false;" src="/assets/2006l/icn_add_20x20.gif" alt="Add Video to QuickList" border="0"></a>
+        <a href="#" onclick="clicked_add_icon('{{ video.video_id }}', 0);return false;" title="Add Video to QuickList"><img id="add_button_{{ video.video_id }}" onmouseover="mouse_over_add_icon('{{ video.video_id }}');return false;" onmouseout="mouse_out_add_icon('{{ video.video_id }}');return false;" src="/assets/2006L/icn_add_20x20.gif" alt="Add Video to QuickList" border="0"></a>
         </div>
 
 			</td>
@@ -101,11 +101,11 @@
 						<span class="grayText">Views:</span> {{ video.views }}
 				</div>
 							<nobr>
-			<img class="rating" src="/assets/2006l/star_sm.gif">
-			<img class="rating" src="/assets/2006l/star_sm.gif">
-			<img class="rating" src="/assets/2006l/star_sm_half.gif">
-			<img class="rating" src="/assets/2006l/star_sm_bg.gif">
-			<img class="rating" src="/assets/2006l/star_sm_bg.gif">
+			<img class="rating" src="/assets/2006L/star_sm.gif">
+			<img class="rating" src="/assets/2006L/star_sm.gif">
+			<img class="rating" src="/assets/2006L/star_sm_half.gif">
+			<img class="rating" src="/assets/2006L/star_sm_bg.gif">
+			<img class="rating" src="/assets/2006L/star_sm_bg.gif">
 	</nobr>
 		<div class="rating">0 ratings, star rating not implemented lol</div>
 	
