--- a/templates/2006L/watch.twig
+++ b/templates/2006L/watch.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 {% block css %}
-<link rel="stylesheet" href="/assets/2006l/watch_yts1161848708.css" type="text/css">
+<link rel="stylesheet" href="/assets/2006L/watch_yts1161848708.css" type="text/css">
 {% endblock %}
 {% block content %}
 <h1 id="video_title">{{ video.title }}</h1>
@@ -154,11 +154,11 @@
 
 				<div id="ratingMessage">{{ __("Rate this video:") }}</div>
 							<nobr>
-			<img class="rating" src="/assets/2006l/star.gif">
-			<img class="rating" src="/assets/2006l/star.gif">
-			<img class="rating" src="/assets/2006l/star.gif">
-			<img class="rating" src="/assets/2006l/star.gif">
-			<img class="rating" src="/assets/2006l/star.gif">
+			<img class="rating" src="/assets/2006L/star.gif">
+			<img class="rating" src="/assets/2006L/star.gif">
+			<img class="rating" src="/assets/2006L/star.gif">
+			<img class="rating" src="/assets/2006L/star.gif">
+			<img class="rating" src="/assets/2006L/star.gif">
 	</nobr>
 		<div class="rating">0 {{ __("ratings") }} (todo)</div>
 	
@@ -209,8 +209,8 @@
 					<div class="statItem"><span class="label">14425 clicks from</span> <a href="https://web.archive.org/web/20061115140409/http://www.i-am-bored.com/bored_link.cfm?link_id=17295" target="_top">http://www.i-am-bored.com/bored_link.cfm?link_id=17295</a></div>
 					<div class="statItem"><span class="label">13088 clicks from</span> <a href="https://web.archive.org/web/20061115140409/http://www.evolutionofdance.com/" target="_top">http://www.evolutionofdance.com/</a></div>
 			</div>
-			<div id="honorsDiv" class="moreStats"><h3>Loading Honors...</h3></div>
-			<div id="fullStatsClose"><a href="#" onclick="toggleFullStats(); return false;">close</a></div>
+			<div id="honorsDiv" class="moreStats"><h3>{{ __("Loading Honors...") }}</h3></div>
+			<div id="fullStatsClose"><a href="#" onclick="toggleFullStats(); return false;">{{ __("close") }}</a></div>
 			<div class="spacer"></div>
 		</div>
 		<div id="honorLinkDiv">
@@ -508,7 +508,7 @@
 		<div id="uploaderInfo">
 		
 		<div id="subscribeDiv">
-			<div><a href="/web/20061115140409/http://youtube.com/subscription_center?add_user=judsonlaipply" title="subscribe to judsonlaipply's videos" onclick="_hbLink('Subscribe','Watch');"><img src="/assets/2006l/btn_subscribe_sm_yellow_99x16.gif" class="alignMid" alt="subscribe" title="subscribe to judsonlaipply's videos" width="99" height="16" border="0"></a></div>
+			<div><a href="/web/20061115140409/http://youtube.com/subscription_center?add_user=judsonlaipply" title="subscribe to judsonlaipply's videos" onclick="_hbLink('Subscribe','Watch');"><img src="/assets/2006L/btn_subscribe_sm_yellow_99x16.gif" class="alignMid" alt="subscribe" title="subscribe to judsonlaipply's videos" width="99" height="16" border="0"></a></div>
 				<div id="subscribeCount" class="smallText">to {{ userlink(video, 'u_') }}</div>
 		</div> <!-- end subscribeDiv -->
 		
