--- a/templates/2006L/index.twig
+++ b/templates/2006L/index.twig
@@ -51,9 +51,9 @@
 	<b class="rch5"></b>
 	</b> <div class="content">		<div class="headerTitle">
 			<div class="headerTitleRight">
-				<a href="/web/20061124193253/http://www.youtube.com/browse?s=rf">See More Videos</a>
+				<a href="/web/20061124193253/http://www.youtube.com/browse?s=rf">{{ __("See More Videos") }}</a>
 			</div>
-			<span>Featured Videos</span>
+			<span>{{ __("Recently Uploaded Videos") }}</span>
 		</div>
 </div>
 	</div>
@@ -121,7 +121,7 @@
 				{% endfor %}
 	</div> <!-- end vListBox -->
 	<div class="footerBox">
-		<div style="padding: 3px 0px; text-align: right;"><a href="/web/20061124193253/http://www.youtube.com/browse?s=rf">See More Videos</a></div>
+		<div style="padding: 3px 0px; text-align: right;"><a href="/web/20061124193253/http://www.youtube.com/browse?s=rf">{{ __("See More Videos") }}</a></div>
 	</div>
 </div> <!-- end hpMainCol -->
 
@@ -233,12 +233,12 @@
 
 		<div class="contentBox">
 			<p style="margin-top:0px;">
-				<b><a href="/web/20061124193253/http://www.youtube.com/watch_queue?all"><img src="/web/20061124193253im_/http://www.youtube.com/img/pic_home_quicklist_30x37.gif" style="float: left; margin: 2px 6px 10px 0px;" border="0">QuickList</a></b><br>
-				Too much good stuff to watch now? Click the "+" on any video to save it for later.
+				<b><a href=""><img src="assets/2006L/newf_icon.png" style="float: left; margin: 2px 6px 10px 0px;" border="0">2006 Frontend</a></b><br>
+				Don't want Bootstrap 5? This is your only option. We're not bringing back insecure PokTube code.
 			</p>
 			<p style="margin-top:0px;">
-				<b><a href="/web/20061124193253/http://www.youtube.com/underground"><img src="/web/20061124193253im_/http://www.youtube.com/img/pic_home_underground_30x37.gif" style="float: left; margin: 2px 6px 10px 0px;" border="0"> YouTube Underground</a></b><br>
-				Voting is underway—help pick the winners!
+				<b><a href=""><img src="assets/2006L/newf_icon.png" style="float: left; margin: 2px 6px 10px 0px;" border="0"> It is no longer possible</a></b><br>
+				to ‘Try for Baby’ with the Grim Reaper.
 			</p>
 			<a href="/web/20061124193253/http://www.youtube.com/blog">Read our Blog</a> to see what else is new!
 		</div>
@@ -259,13 +259,13 @@
 		<div class="contentBox">
 			
 			<p style="margin-top:0px;">
-			<b><a href="/web/20061124193253/http://www.youtube.com/signup?signup_type=c"><img src="/web/20061124193253im_/http://www.youtube.com/img/pic_home_comedians_30x37.gif" style="float: left; margin: 2px 6px 10px 0px;" border="0"> Comedian Accounts</a></b><br>
-			Get your standup, improv, or sketches out to a huge audience!
+			<b><a href=""><img src="assets/2006L/newf_icon.png" style="float: left; margin: 2px 6px 10px 0px;" border="0"> A meteor can hit a building,</a></b><br>
+			which case everyone will run out before the collision. Those who do not exit the building will die.
 			</p>
 			
 			<p>
-				<b><a href="/web/20061124193253/http://www.youtube.com/school_main"><img src="/web/20061124193253im_/http://www.youtube.com/img/colleges.gif" style="float: left; margin: 2px 6px 10px 0px;" border="0">YouTube Colleges</a></b><br>
-				Join or request your college now and start sharing your college experience!
+				<b><a href=""><img src="assets/2006L/newf_icon.png" style="float: left; margin: 2px 6px 10px 0px;" border="0">Sims automatically leave if a meteor is approaching, unless it is a school,</a></b><br>
+				in which children are not allowed to leave and will always die.
 			</p>
 		</div>
 	</div> <!-- end hpContentBlock -->
